--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  -webkit-text-size-adjust: 100%;
+html {
+  -webkit-text-size-adjust: 100% !important;
 }
