chore: text-size-adjust

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  -webkit-text-size-adjust: 100% !important;
+html,
+body {
+  text-size-adjust: 100% !important;
 }
